--- a/estudo/index.html
+++ b/estudo/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <div class="main">
+        
+    </div>
     <button onclick="clicked()">
         set number
     </button>
